Import from 24.01